# meddlingkids

./: .dockerignore  .env.example  .gitignore  APPLICATION_FLOW.mermaid  CHANGELOG.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/: README.md  index.ts  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
server/src/: __init__.py  api_routes.py  app.py  app.ts  index.ts  main.py  routes.py  types.ts
server/src/agents/: __init__.py  base.py  chat_agent.py  config.py  consent_detection_agent.py  consent_extraction_agent.py  context_builder.py  context_providers.py  cookie_info_agent.py  gdpr_context.py  llm_client.py  middleware.py  observability_setup.py  report_workflow.py  script_analysis_agent.py  storage_info_agent.py  structured_report_agent.py  summary_findings_agent.py  tracking_analysis_agent.py
server/src/agents/prompts/: __init__.py  consent_detection.py  consent_extraction.py  cookie_info.py  script_analysis.py  storage_info.py  structured_report.py  summary_findings.py  (+1 more)
server/src/analysis/: __init__.py  cookie_decoders.py  cookie_lookup.py  domain_cache.py  domain_classifier.py  geo_lookup.py  privacy_score.py  script_cache.py  script_grouping.py  scripts.py  storage_lookup.py  tc_string.py  tc_validation.py  tcf_lookup.py  tracker_patterns.py  tracking.py  tracking_summary.py  vendor_lookup.py
server/src/auth/: __init__.py  auth_routes.py  config.py  middleware.py  routes.py
server/src/browser/: access_detection.py  device_configs.py  manager.py  session.py
server/src/consent/: __init__.py  click.py  constants.py  detection.py  extraction.py  overlay_cache.py  partner_classification.py  platform_detection.py  text_parser.py
server/src/data/: _base.py  benign-scripts.ts  consent_loader.py  domain_info.py  geo_loader.py  index.ts  loader.py  loader.ts  media_loader.py  partner_loader.py  tracker_loader.py  tracking-scripts.ts  types.ts
server/src/models/: __init__.py  analysis.py  browser.py  consent.py  item_info.py  partners.py  report.py  tracking_data.py
server/src/pipeline/: __init__.py  analysis_pipeline.py  browser_phases.py  overlay_pipeline.py  overlay_steps.py  pipeline_executors.py  sse_helpers.py  stream.py
server/src/prompts/: consent-detection.ts  consent-extraction.ts  index.ts  script-analysis.ts  tracking-analysis.ts  tracking_analysis.py
server/src/routes/: analyze-helpers.ts  analyze-stream.ts  analyze.ts  analyze_helpers.py  analyze_stream.py  index.ts  interaction.ts  stream.ts
server/src/services/: access-detection.ts  access_detection.py  analysis.py  analysis.ts  browser-session.ts  browser.ts  browser_session.py  consent-click.ts  consent-detection.ts  consent-extraction.ts  consent_click.py  consent_detection.py  consent_expansion.py  consent_extraction.py  device-configs.ts  device_configs.py  index.ts  openai.ts  openai_client.py  partner-classification.ts  partner_classification.py  privacy-score.ts  privacy_score.py  script-analysis.ts  script_analysis.py  script_grouping.py  tracker_patterns.py
server/src/types/: __init__.py  analysis.py  browser.py  consent.py  partners.py  tracking.py  tracking_data.py
server/src/utils/: cache.py  errors.py  errors.ts  image.py  index.ts  json_parsing.py  logger.py  logger.ts  retry.py  retry.ts  risk.py  serialization.py  text.py  tracking-summary.ts  tracking_summary.py  url.py  url.ts  usage_tracking.py
server/tests/: conftest.py  test_access_detection.py  test_agent_config.py  test_base_agent.py  test_browser_session_cleanup.py  test_consent_click.py  test_consent_constants.py  test_consent_merge.py  test_consent_text_parser.py  test_cookie_decoders.py  test_cookie_lookup.py  test_domain_cache.py  test_errors.py  test_image.py  test_json_parsing.py  test_loader.py  test_logger.py  test_main.py  test_middleware.py  test_models.py  test_overlay_steps.py  test_partner_classification.py  test_platform_detection.py  test_risk.py  test_scoring.py  test_script_analysis_agent.py  test_script_cache.py  test_script_grouping.py  test_scripts.py  test_sse_helpers.py  test_storage_lookup.py  test_streaming_timeout.py  test_tracker_patterns.py  test_tracking_summary.py  test_unknown_domain_guard.py  test_url.py  test_url_enrichment.py  test_usage_tracking.py  test_vendor_lookup.py
server/tests/agents/: test_agent_config.py  test_base_agent.py  test_consent_merge.py  test_context_builder.py  test_context_providers.py  test_gdpr_context.py  test_llm_client.py  test_middleware.py  test_middleware_extended.py  test_script_analysis_agent.py  test_tracking_analysis_agent.py  test_url_enrichment.py
server/tests/analysis/: test_cookie_decoders.py  test_cookie_lookup.py  test_domain_cache.py  test_domain_classifier.py  test_geo_lookup.py  test_scoring_advanced.py  test_scoring_extended.py  test_script_cache.py  test_scripts.py  test_scripts_extended.py  test_storage_lookup.py  test_tc_string.py  test_tc_validation.py  test_tcf_lookup.py  test_tracking_summary.py  test_unknown_domain_guard.py  test_vendor_lookup.py  test_vendor_lookup_extended.py
server/tests/auth/: test_auth_guard.py
server/tests/browser/: test_access_detection.py  test_browser_session_cleanup.py  test_device_configs.py  test_session_helpers.py
server/tests/consent/: test_click_helpers.py  test_overlay_cache.py  test_partner_classification.py  test_platform_detection.py  test_platform_helpers.py  test_text_parser_extended.py
server/tests/data/: test_geo_loader.py  test_loader.py  test_loader_extended.py
server/tests/models/: test_models.py  test_models_extended.py  test_report.py
server/tests/pipeline/: test_analysis_pipeline.py  test_analysis_pipeline_renders.py  test_overlay_steps_extended.py  test_sse_helpers_extended.py  test_sse_screenshot.py  test_stream_helpers.py
server/tests/utils/: test_cache.py  test_cache_extended.py  test_image.py  test_image_extended.py  test_logger.py  test_serialization.py  test_text.py  test_url.py  test_usage_tracking.py
(+113 files in other folders)
