[project]
name = "server"
version = "1.8.4"
description = "Python server for Meddling Kids"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.42.0",
    "agent-framework-core==1.0.0",
    "agent-framework-openai==1.0.0",
    "authlib>=1.3.0",
    "azure-identity>=1.21.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b50",
    "httpx>=0.28.0,<1.0",
    "itsdangerous>=2.2.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",
    "brotli>=1.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pillow>=12.2.0",
    "tldextract>=5.3.1",
    "orjson>=3.11.8",
]

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "mypy>=1.20.0",
    "ruff>=0.15.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0,<1.0",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Poe tasks ───────────────────────────────────────────────────

[tool.poe.tasks]

[tool.poe.tasks.lint]
help = "Run all linting (ruff check + mypy)"
sequence = ["lint:ruff", "lint:mypy"]

[tool.poe.tasks."lint:ruff"]
help = "Run ruff linter and formatter check"
sequence = [
    { cmd = "ruff check src/ tests/" },
    { cmd = "ruff format --check src/ tests/" },
]

[tool.poe.tasks."lint:mypy"]
help = "Run mypy type checking"
cmd = "mypy src/ tests/"

[tool.poe.tasks.format]
help = "Auto-fix ruff lint issues and format code"
sequence = [
    { cmd = "ruff check --fix src/ tests/" },
    { cmd = "ruff format src/ tests/" },
]

[tool.poe.tasks.test]
help = "Run unit tests"
cmd = "pytest tests/ -v"

# ── Ruff ────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (flag bare prints)
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # allow print() — used extensively in logger
    "SIM108", # allow if/else instead of ternary
    "RUF001", # ambiguous unicode in strings (intentional in LLM prompts)
    "RUF002", # ambiguous unicode in docstrings (en dashes, math symbols)
    "RUF003", # ambiguous unicode in comments (intentional)
    "N815",   # mixedCase in class scope (Pydantic models matching JSON API)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Pytest ──────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Upstream: agent-framework-core uses the deprecated LoggingHandler
    # from opentelemetry-sdk in configure_otel_providers().
    "ignore:`LoggingHandler` in `opentelemetry-sdk` is deprecated:DeprecationWarning",
]

# ── Mypy ────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["src", "tests"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
